# prebuild

./: README.md  bin.js  gyp.js  gypbuild.js  help.txt  pack.js  package.json  prebuild.js  rc.js  strip.js  upload.js
.github/workflows/: check.yml
test/: gypbuild-test.js  integration-cmake-test.js  integration-gyp-test.js  integration-napi-cmake-test.js  integration-napi-gyp-test.js  pack-test.js  rc-test.js  strip-test.js  upload-test.js
test/native-module-cmake/: CMakeLists.txt  package.json
test/native-module-cmake/src/: native.cc
test/native-module-gyp/: binding.gyp
test/native-module-napi-cmake/: CMakeLists.txt  package.json
test/native-module-napi-gyp/: binding.gyp
